--- a/src/Components/About/about.css
+++ b/src/Components/About/about.css
@@ -17,41 +17,7 @@
 }
 
 
-/* Box sizing rules */
-/* *,
-*::before,
-*::after {
-  box-sizing: border-box;
-} */
 
-
-
-/* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
-
-/* Set core root defaults */
-
-
-/* Set core body defaults */
-
-/* body {
-  min-height: 100vh;
-  text-rendering: optimizeSpeed;
-  line-height: 1.5;
-} */
-
-/* A elements that don't have a class get default styles */
-a:not([class]) {
-  text-decoration-skip-ink: auto;
-}
-
-/* Make images easier to work with */
-/* img,
-picture {
-  max-width: 100%;
-  display: block;
-} */
-
-/* Inherit fonts for inputs and buttons */
 input,
 button,
 textarea,
@@ -59,7 +25,7 @@ select {
   font: inherit;
 }
 
-/* Remove all animations, transitions and smooth scroll for people that prefer not to see them */
+
 @media (prefers-reduced-motion: reduce) {
   html:focus-within {
     scroll-behavior: auto;
@@ -75,25 +41,8 @@ select {
   }
 }
 
-/* body {
-  margin:auto;
-  display: grid;
-  place-content: center;
-  min-height: 100vh;
 
-  font-family: var(--ff-primary);
-  font-weight: var(--fw-400);
 
-  background-color: black;
-}
-
- */
-
-/* utilities */
-.flex {
-  display: flex;
-  /* gap: var(--gap, 1rem); */
-}
 
 
 .flow > *:where(:not(:first-child)) {
@@ -101,7 +50,7 @@ select {
 }
 
 .bg-primary-400 { 
-  /* background: hsl(var(--clr-primary-400)); */
+  
   background-color: #38eaf7;
 }
 .bg-secondary-400 {
@@ -128,21 +77,27 @@ select {
 .border-primary-400 {
   border: 3px solid #38eaf7;
   background-color: #17202E;
-  /* text-decoration: none; */
+  
 }
 
-/* components */
-.grid-col-span-2{
+
+.about-grid-span2{
     grid-row:span 2
 }
 
-.aboutouter{
+.about-body{
   background-color: rgba(10, 25, 49, 0.8);
   position: relative;
   z-index: 1;
   margin-top: -10rem;
-  /* padding-bottom: 80px; */
+  
   height: auto;
+}
+@media(max-width: 400px)
+{
+  .about-body{
+    padding-right: 63%;
+  }
 }
 
 .aboutmain{
@@ -155,7 +110,7 @@ select {
   padding-bottom: 0;
 }
 
-.name2{
+.about-content-count-main{
   margin-top: 1%;
   font-size: 35px;
   font-weight: var(--fw-400);
@@ -164,21 +119,38 @@ select {
   font-family: "Rowdies", cursive;
 
 }
-
-.firstrowaboutus {
+.about-heading{
+  font-family: "Rowdies", cursive;
+    font-size: 2.5rem;
+    padding: 20px;
+}
+.about-subheading{
+  font-family: "Roboto Condensed", sans-serif;
+    font-size: 1rem;
+    padding-top: 40px;
+    color: #57b8ff;
+    letter-spacing: 0.5em;
+}
+.about-title-body {
   z-index: 100;
   text-align: center;
   padding-top: 160px;
 }
 
-.firstrowaboutus2 {
-  z-index: 100;
+
+
+
+.about-title{
+  margin-top: 5rem;
+  font-size: 3.4rem;
+  color:white;
   text-align: center;
-  /* padding-top: 160px; */
-}
+  line-height: 1.5cm;
+  font-weight: var(--fw-400);
+  z-index: 111;
+  }
 
-
-.lineaboutus22 {
+.about-title-line2 {
   height: 3px;
   width: 38%;
   color: white;
@@ -189,7 +161,7 @@ select {
   margin-left: 0;
 }
 
-.lineaboutus12 {
+.about-title-line1 {
     height: 3px;
     width: 38%;
     color: white;
@@ -200,18 +172,14 @@ select {
     margin-right: 0;
   }
 
-.deptpagelink{
-  text-decoration: none;
-}
-
-.testimonial-grid {
+.about-content {
   display:grid;
   column-gap: 2em;
   grid-template-columns: 1fr 1fr;
   z-index: 1;
 }
 
-.row2{
+.about-content-grid-row2{
   display:grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: 1fr 1fr;
@@ -220,38 +188,33 @@ select {
 }
 
 
-.testimonial {
+.about-content-grid {
   font-size: var(--fs-400);
   padding: 1.5rem;
   border-radius: 0.5rem;
-  /* box-shadow: 2.5rem 3.75rem 3rem -3rem hsl(var(--clr-secondary-400) / 0.25); */
   z-index: 1;
 
 }
-
-.testimonial.quote {
+.about-content-grid-box {
+  display: flex;
+  
+}
+.about-content-grid.quote {
   background-repeat: no-repeat;
   background-position: top right 10%;
   z-index: 1;
 }
 
-.img3 {
+.about-content-icon {
   aspect-ratio: 1;
   width: 100%;
   height: 100%;
   border-radius: 0% ;
-  /* position: relative;
-  top:-3rem; */
-}
-
-.imgbox1{
-  width: 30px;
-  padding: 0%;
-  height: 30px;
+  
 }
 
 
-.testimonial .name {
+.about-content-grid .about-content-title {
   margin-top: 1%;
   font-size: 35px;
   font-weight: var(--fw-400);
@@ -260,11 +223,11 @@ select {
   font-family: "Rowdies", cursive;
 
 }
-.position{
+.about-content-text{
   font-size: 25px;
   opacity: 0.5;
 }
-.subscript1{
+.about-content-count-sub{
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   color: white;
   font-size: 1.6rem;
@@ -272,30 +235,19 @@ select {
 }
 
 
-.testimonial .position {
+.about-content-grid .about-content-text {
   font-size: var(--fs-300);
 }
 
-.testimonial > p:first-of-type {
+.about-content-grid > p:first-of-type {
   font-size: var(--fs-500);
   line-height: 1.2;
 }
 
-.testimonial > p:last-of-type {
+.about-content-grid > p:last-of-type {
   opacity: 0.7;
 }
 
-.about-title{
-margin-top: 5rem;
-/* padding-left: 15px; */
-font-size: 3.4rem;
-color:white;
-text-align: center;
-line-height: 1.5cm;
-font-weight: var(--fw-400);
-z-index: 111;
-
-}
 .about-text{
 text-align: center;
 font-size: 1.8rem;
@@ -308,25 +260,24 @@ z-index: 1;
 }
 
 
-.dept-name{
+.about-department-heading{
   display: inline;
-  /* font-size: 1.4rem; */
   line-height: 0.1;
   position: relative;
   top:-10px;
   padding-left: 1rem;
   margin:10px;
-  /* padding-left: 10px; */
-  /* font-weight: bold; */
   font-family: "Rowdies", cursive;
   font-size: 1.6rem;
   color: #38eaf7;
 }
 
-.title-div{
+.about-department-title-body{
   padding-left:16px;
 }
-
+.about-department-link{
+  text-decoration: none;
+}
 .dept-title{
   margin-top: 8vh;
   padding-left: 20px;
@@ -335,84 +286,77 @@ z-index: 1;
   text-align: center;
   font-weight: var(--fw-400);
 }
-.dept-grid{
+.about-department-grid{
   display: grid;
   gap:2em;
-  /* padding-block: 2rem; */
+  
   width: 100%;
   margin-inline: auto;
   grid-template-columns: 1fr 1fr 1fr ;
     
 }
-.dept-grid-box{
-  /* block-size: 300px; */
+.about-department-grid-box{
+  
   width: 100%;
   height: 100%;
   padding: 1rem;
   border-radius: 1.2rem;
   border-style: solid 4px;
   border-color: rgb(89, 233, 238);
-  /* box-shadow: 2.5rem 3.75rem 3rem -3rem hsl(var(--clr-secondary-400) / 0.25); */
+
 }
 
  
-.dept-content{
+.about-department-text{
   font-size: 1.1rem;
   margin-top: 0;
-  /* padding: 15px 15px 15px 15px; */
+  
 }
-.dept-img{
+.about-department-icon{
   margin: 0px;
   max-width: 40px;
 }
-.dept-grid-box:hover {
-  /* transform: translateY(-0.9%); */
-  /* box-shadow: 0 4rem 8rem rgba(0, 0, 0, 0.5); */
+.about-department-grid-box:hover {
+ 
   border-color: white;
 }
 
-.dept{
+.about-department{
   margin-bottom: 7rem;
   margin-top: 5rem;
   width: 100%;
-  /* background-color: aliceblue; */
+ 
 }
 
 @media(max-width: 700px)
 {
-    .testimonial-grid{
+    .about-content{
        display: flex;
        flex-wrap: wrap;
     }
-    .testi{
+    .content-grid-width{
       width: 100%;
       word-wrap: break-word;
     }
-    .testimonial{
+    .about-content-grid{
       margin-top: 10px;
     }
-    .row2{
+    .about-content-grid-row2{
       display: flex;
        flex-wrap: wrap;
       }
-      .dept-grid{
+      .about-department-grid{
         display: flex;
          flex-wrap: wrap;  
     }
-    .flex{
+    .about-content-grid-box{
       width: 40%;
     }
 }
 
 @media(max-width: 600px)
 {
-  .testi2{
+  .about-content-width{
     width: 46%;
-  }
-}
-@media(max-width: 400px)
-{
-  .aboutouter{
-    padding-right: 63%;
   }
 }
