--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,9 @@
   font-family: SansationLight;
   src: url(./Assets/fonts/Sansation_Light.ttf);
 }
+::-webkit-scrollbar{
+  display: none;
+}
 
 * {
   margin: 0;
@@ -21,6 +24,7 @@
   box-sizing: border-box;
   font-family: "poppins", "Gill Sans", "Gill Sans MT", "Calibri", "Trebuchet MS",
     sans-serif;
+  
 }
 
 h1 {
