--- a/src/Components/Team/team.css
+++ b/src/Components/Team/team.css
@@ -33,14 +33,20 @@
   color: #57b8ff;
   letter-spacing: 0.5em;
   /* margin-top: 13rem; */
-  /* margin-bottom: 20px; */
 }
 
 .about-department {
   padding-top: 10.4rem;
+  background-color: rgba(10, 25, 49, 0.8);
+  /* background-color: #17202e; */
+  position: relative;
+  padding-bottom: 75px;
+  z-index: 1;
+  /* margin-bottom: 25px; */
+
 }
 .dep_para {
-  padding-left: 10px;
+  /* padding-left: 10px; */
   padding-top: 10px;
 }
 
@@ -70,12 +76,20 @@
 .about-department-grid-box {
   /* border: 2px solid #56b6fc; */
   transition: all 0.3s ease;
-  background-color: rgb(20, 20, 20);
+  /* background-color: rgb(20, 20, 20); */
+  background-color: #17202e;
   text-align: left;
+  padding-left: 40px;
 }
 
 .about-department-grid-box:hover {
-  border-color: white;
+  background-color: #17202e;
+  box-shadow: 0px 0px 10px 0px #3869a0;
+  z-index: 3;
+  backdrop-filter: blur(4.5px);
+  -webkit-backdrop-filter: blur(4.5px);
+  border-radius: 10px;
+  /* max-width: 50%; */
 }
 
 .about-department-grid {
@@ -88,7 +102,7 @@
   border: none;
   color: #57b8ff;
   transition: all 0.3s ease;
-  padding: 5px 10px;
+  /* padding: 5px 10px; */
   border-radius: 20px;
 }
 .dep-button {
@@ -116,19 +130,53 @@
 .dep-button:hover .arrow {
   opacity: 1;
 }
-.team_robosuper_pic,
-.team_robo_pic,
-.team_work_pic {
+
+.gallery-section{
+  background: rgba(20, 20, 20, 0.9);
+
+  position: relative;
+  z-index: 100;
+}
+
+.dep-subheading{
+  text-align: center;
+  font-family: "Roboto Condensed", sans-serif;
+  font-size: 1rem;
+  padding-top: 60px;
+  color: #57b8ff;
+  letter-spacing: 0.5em;
+}
+
+.imageheading{
+  position: relative;
+  top: -100px;
+  /* text-align: left; */
+  left: -19rem;
+  z-index: 1000;
+  font-family: "Rowdies", cursive;
+  font-size: 2.3rem;
+  color: white;
+  text-shadow: 2px 2px 20px #000000;
+}
+
+
+.team_robo_pic {
   width: 120vw;
   text-align: center;
   z-index: 100;
+  transition: transform 0.2s;
 }
-.img1,
-.img2,
-.img3 {
+
+.team_robo_pic:hover{
+  -ms-transform: scale(1.5); /* IE 9 */
+  -webkit-transform: scale(1.5); /* Safari 3-8 */
+  transform: scale(1.2);
+}
+.img1 {
   width: 70%;
   z-index: 100;
 }
+
 .about-seperator3 {
   display: flex;
   justify-content: center;
@@ -136,20 +184,13 @@
   width: 92.5%;
   margin: auto;
 }
-.roboheading,
-.workheading,
-.robosuperheading {
-  font-family: "Rowdies", cursive;
-  font-size: 2rem;
-  color: #57b8ff;
-}
+
 .container {
   display: flex;
   flex-direction: column;
 }
-.team_robocon,
-.team_workshop,
-.team_robosuper {
+
+.image_main_container {
   padding: 3%;
   display: flex;
   flex-direction: column;
@@ -161,9 +202,7 @@
 }
 
 @media (max-width: 600px) {
-  .roboheading,
-  .workheading,
-  .robosuperheading {
+  .imageheading {
     font-size: 22px;
   }
   .about-department-grid {
@@ -172,4 +211,10 @@
   .about-heading {
     font-size: 2rem;
   }
+  .imageheading{
+    left: 0;
+    top: -40px;
+    font-size: 0.9rem;
+  }
+
 }
