--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@
   font-family: SansationLight;
   src: url(./Assets/fonts/Sansation_Light.ttf);
 }
-::-webkit-scrollbar{
+::-webkit-scrollbar {
   display: none;
 }
 
@@ -24,7 +24,6 @@
   box-sizing: border-box;
   font-family: "poppins", "Gill Sans", "Gill Sans MT", "Calibri", "Trebuchet MS",
     sans-serif;
-  
 }
 
 h1 {
@@ -43,4 +42,7 @@ h1 {
 .paricles {
   position: sticky;
   width: 100%;
+}
+:root {
+  --primary-color: #;
 }
