--- a/src/Components/Events/Events.css
+++ b/src/Components/Events/Events.css
@@ -41,7 +41,7 @@
   padding: 5px 12.5px;
   background-color: #141824;
   color: white;
-  border: 1px solid white;
+  border: 1px solid #00a0ff;
   transition: all 0.3s ease;
   border-radius: 300px;
   cursor: pointer;
