--- a/src/Components/Contact2/contact2.css
+++ b/src/Components/Contact2/contact2.css
@@ -30,12 +30,16 @@
 }
 .contact-btn-all:hover .contact_btn_home {
   background-color: white;
-  /* transform: translate(-20px, 20px) rotate(-90deg); */
-  /* border-radius: 10px; */
 }
 .contact-btn-all:hover .contact-us-btn-text {
   color: #00a0ff;
 }
-/* .contact-btn-container {
-     padding: 200px; 
-  } */
+
+@media(max-width: 600px) {
+    .contact_btn_home{
+        height: 19vh;
+    }
+    .contact-us-btn-text{
+        font-size: 17px;
+    }
+}
