--- a/src/Components/Creators/Creators.css
+++ b/src/Components/Creators/Creators.css
@@ -69,7 +69,7 @@
 .creator_box {
   position: relative;
   min-width: 250px;
-  background-color: #12485f;
+  background-color: #17202e;
   box-shadow: 2px 3px 30px rgba(0, 0, 0, 0.05);
   display: flex;
   flex-direction: column;
@@ -79,6 +79,11 @@
   margin: 20px;
   position: relative;
   border-radius: 10px;
+}
+
+.creator-outer-box :hover{
+  background-color: #121623;
+  box-shadow: 0px 0px 10px 0px #3869a0;
 }
 
 .creator_top_bar {
