--- a/src/Components/Contact/Contact.css
+++ b/src/Components/Contact/Contact.css
@@ -49,6 +49,10 @@
 }
 /* CONTACT FULL FORM */
 
+.contact-linkedin{
+  text-decoration: none;
+}
+
 .contact_form_details {
   margin: 4vw 10vw;
   width: 80%;
