--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -13,6 +13,10 @@
   z-index: 1;
   backdrop-filter: blur(0 rem);
 }
+.creator_link{
+    all: unset;
+    cursor: pointer;
+}
 .footer {
   color: aliceblue;
   width: 100%;
