--- a/src/Components/Testimonials/Testimonials.css
+++ b/src/Components/Testimonials/Testimonials.css
@@ -236,7 +236,7 @@
 
 @media only screen and (max-width: 768px) {
   .testimonial-section-container {
-    padding-bottom: 120px;
+    padding-bottom: 160px;
   }
   .myCarousel p {
     line-height: 15.6px !important;
@@ -254,7 +254,7 @@
   .myCarousel {
     /* background: #fafafa; */
     margin-top: -9%;
-    width: 88%;
+    /* width: 88%; */
     margin-left: auto;
     margin-right: auto;
     padding-top: 8%;
@@ -262,7 +262,7 @@
     padding-left: 5%;
     padding-right: 5%;
     /* border: 1px solid #ddd; */
-    height: 390px;
+    height: auto;
   }
 
   .carousel .slide img {
